add start script to package

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "description": "Allows extending fetch to add custom mock responses in the place of network requests.",
   "main": "index.js",
-  "scripts": {`
+  "scripts": {
+    "start": "echo 'TODO'"
   },
   "keywords": [
     "fetch",
